feat: ajout de la fonctionnalité de suppression de rôles de projet avec la commande DeleteProjectRole et son gestionnaire, mise à jour de la documentation Swagger et implémentation dans le dépôt Prisma
